--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -27,7 +27,14 @@
     <property name="title">
      <string>Pre&amp;ferences</string>
     </property>
+    <widget class="QMenu" name="menuNumber_of_threads">
+     <property name="title">
+      <string>Number of threads</string>
+     </property>
+     <addaction name="action1"/>
+    </widget>
     <addaction name="actionTraces"/>
+    <addaction name="menuNumber_of_threads"/>
    </widget>
    <addaction name="menuPreferences"/>
   </widget>
@@ -45,7 +52,12 @@
     <bool>true</bool>
    </property>
    <property name="text">
-    <string>Traces</string>
+    <string>&amp;Traces</string>
+   </property>
+  </action>
+  <action name="action1">
+   <property name="text">
+    <string>1</string>
    </property>
   </action>
  </widget>
