--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -29,12 +29,13 @@
     </property>
     <widget class="QMenu" name="menuNumber_of_threads">
      <property name="title">
-      <string>Number of threads</string>
+      <string>&amp;Number of threads</string>
      </property>
      <addaction name="action1"/>
     </widget>
     <addaction name="actionTraces"/>
     <addaction name="menuNumber_of_threads"/>
+    <addaction name="actionTest_message"/>
    </widget>
    <addaction name="menuPreferences"/>
   </widget>
@@ -57,7 +58,12 @@
   </action>
   <action name="action1">
    <property name="text">
-    <string>1</string>
+    <string>&amp;1</string>
+   </property>
+  </action>
+  <action name="actionTest_message">
+   <property name="text">
+    <string>Test message</string>
    </property>
   </action>
  </widget>
